@@ -1193,7 +1193,7 @@ code{
   border:1px solid #e6e6e6;
   border-radius:0.25rem;
   color:#3e3e3e;
-  font-size:90%;
+  font-size:100%;
   padding:0.2rem 0.5rem;
   word-break:break-word; }
 
