@@ -261,10 +261,11 @@ $code-border-color:             $border-color !default;
 $code-border-radius:            $global-radius !default;
 $code-background:               rgb(240, 240, 240) !default;
 $code-font-color:               $font-color !default;
-$code-font-size:                90% !default;
+$code-font-size:                100% !default;
 $code-padding:                  .2rem .5rem !default;
 
 // preformatted block
+$pre-font-size:                 90% !default;
 $pre-padding:                   1rem 1.5rem !default;
 $pre-margin-bottom:             $generic-margin-bottom !default;
 
