@@ -26,7 +26,7 @@ pre {
     border-radius: $code-border-radius;
     color: $code-font-color;
     display: block;
-    font-size: $code-font-size;
+    font-size: $pre-font-size;
     margin-bottom: $pre-margin-bottom;
     overflow-x: auto;
     padding: $pre-padding;
